# rust-bench-binsearch-farcri

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: binsearch.rs
src/: lib.rs  tests.rs
