[package]
name = "binary_search"
version = "0.1.0"
authors = ["Lzu Tao <taolzu@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "binsearch"
harness = false

# Reduce build time by setting proc-macro crates non optimized.
[profile.release.build-override]
opt-level = 0
[profile.bench.build-override]
opt-level = 0
